--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,10 +31,14 @@ jobs:
   #       pip install --upgrade platformio
   #   - name: Run PlatformIO
   #     run: pio run -e debug
+
   
-  build_and_check_ubuntu:
+  build_and_check_:
     name: build, run static code analysis cppcheck. Ubu
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
     steps:
       - uses: actions/checkout@v2
         with:
@@ -53,42 +57,6 @@ jobs:
       #    key: ${{ runner.os }}-${{ hashFiles('**/lockfiles') }}
       #- name: Set up Python
       #  uses: actions/setup-python@v2
-      - name: Install PlatformIO
-        run: |
-          python -m pip install --upgrade pip
-          pip install --upgrade platformio
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
-        with:
-          java-version: 11
-      - name: Run Code Analyse CppCheck
-        run: pio check
-  
-  build_and_check_windows:
-    name: build, run static code analysis cppcheck. Win 
-    runs-on: windows-latest
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
-      - name: Install PlatformIO
-        run: |
-          python -m pip install --upgrade pip
-          pip install --upgrade platformio
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
-        with:
-          java-version: 11
-      - name: Run Code Analyse CppCheck
-        run: pio check
-  
-  build_and_check_mac:
-    name: build, run static code analysis cppcheck. Mac 
-    runs-on: macos-latest
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
       - name: Install PlatformIO
         run: |
           python -m pip install --upgrade pip
