--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,33 +38,15 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest, windows-latest]
     steps:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
-      #- name: Cache pip
-      #  uses: actions/cache@v2
-      #  with:
-      #    path: ~/.cache/pip
-      #    key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-      #    restore-keys: |
-      #      ${{ runner.os }}-pip-
-      #- name: Cache PlatformIO
-      #  uses: actions/cache@v2
-      #  with:
-      #    path: ~/.platformio
-      #    key: ${{ runner.os }}-${{ hashFiles('**/lockfiles') }}
-      #- name: Set up Python
-      #  uses: actions/setup-python@v2
       - name: Install PlatformIO
         run: |
           python -m pip install --upgrade pip
           pip install --upgrade platformio
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
-        with:
-          java-version: 11
       - name: Run Code Analyse CppCheck
         run: pio check
   
