--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,12 +33,26 @@ jobs:
   #     run: pio run -e debug
 
   
-  build_and_check_:
-    name: build, run static code analysis cppcheck. Ubu
+  build:
+    name: build Ubuntu und Windowa
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest]
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      - name: Install PlatformIO
+        run: |
+          python -m pip install --upgrade pip
+          pip install --upgrade platformio
+      - name: Run build
+        run: pio run
+        
+  check_:
+    name: run static code analysis cppcheck
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
         with:
