--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -62,7 +62,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install --upgrade platformio
       - name: Run Code Analyse CppCheck
-        run: pio check
+        run: pio check -e weact_mini_h743vitx
   
   build_and_check_ubuntu_sonar:
     name: build with plattformio cli, run static code analysis on sonarcloud.io   
