--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,7 +49,7 @@ jobs:
           pip install --upgrade platformio
       - name: Run build
         run: pio run -e weact_mini_h743vitx
-        
+  
   check_:
     name: run static code analysis cppcheck
     runs-on: ubuntu-latest
@@ -63,6 +63,20 @@ jobs:
           pip install --upgrade platformio
       - name: Run Code Analyse CppCheck
         run: pio check -e weact_mini_h743vitx
+  
+  units_tests:
+    name: run native units test
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      - name: Install PlatformIO
+        run: |
+          python -m pip install --upgrade pip
+          pip install --upgrade platformio  
+      - name: Run tests on the native platform
+        run: platformio test -e extra_unity_options
   
   build_and_check_ubuntu_sonar:
     name: build with plattformio cli, run static code analysis on sonarcloud.io   
