--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,29 @@ jobs:
   #       pip install --upgrade platformio
   #   - name: Run PlatformIO
   #     run: pio run -e debug
-
+  
+  build_stm32ide_docker:
+    runs-on: ubuntu-latest
+    env:
+      BUILD_WRAPPER_OUT_DIR: build_wrapper_output_directory # Directory where build-wrapper output will be placed
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          path: build
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '14'
+      - run: npm install -g bats
+      - run: bats -v
+      - run: ls
+      - run: ls ${{ github.workspace }}
+      - uses: xanderhendriks/action-build-stm32cubeide@v5.0
+        with:
+          #project-path: 'build/'
+          project-path: 'build/'
+          project-target: 'comm-module.dina.cxw.app'
+      - run: ls
   
   build:
     name: build
