--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,6 +33,7 @@ jobs:
   #     run: pio run -e debug
   
   build_stm32ide_docker:
+    name: build STM32CubeIde Docker
     runs-on: ubuntu-latest
     env:
       BUILD_WRAPPER_OUT_DIR: build_wrapper_output_directory # Directory where build-wrapper output will be placed
@@ -56,7 +57,7 @@ jobs:
       - run: ls
   
   build:
-    name: build
+    name: build PlatformIO
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -101,8 +102,7 @@ jobs:
         run: platformio test -e extra_unity_options
   
   build_and_check_ubuntu_sonar:
-    name: build with plattformio cli,|
-      run static code analysis on sonarcloud.io   
+    name: build plattformio and run static code analysis on sonarcloud.io   
     runs-on: ubuntu-latest
     env:
       BUILD_WRAPPER_OUT_DIR: build_wrapper_output_directory # Directory where build-wrapper output will be placed
