--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -165,4 +165,4 @@ jobs:
           #sonar-scanner --define sonar.cfamily.build-wrapper-output="${{ env.BUILD_WRAPPER_OUT_DIR }}" 
           sonar-scanner \
             --define sonar.cfamily.build-wrapper-output="${{ env.BUILD_WRAPPER_OUT_DIR }}" \
-            --define sonar.coverageReportPaths=coverag.xml
+            --define sonar.coverageReportPaths=rws.xml
