--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -103,7 +103,8 @@ jobs:
   
   build_and_check_ubuntu_sonar:
     name: build plattformio and run static code analysis on sonarcloud.io   
-    runs-on: ubuntu-latest
+    #runs-on: ubuntu-latest
+    runs-on: self-hosted-raspi
     env:
       BUILD_WRAPPER_OUT_DIR: build_wrapper_output_directory # Directory where build-wrapper output will be placed
     steps:
